Fixed misaligned elements

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,8 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display:flex;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -20,6 +22,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  display:flex;
 }
 
 .logo {
@@ -27,6 +30,10 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  display:flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left:15px;
 }
 
 button {
@@ -35,14 +42,35 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  display:flex;
+  align-self: center;
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  font-size: 15px;
+  margin: 10px;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-style:normal;
+  align-self: center;
+  justify-content: center;
+  display:flex;
 }
 
 ul {
   list-style-type: none;
+}
+
+.links{
+  display:flex;
+
+}
+
+.notif{
+  display:flex;
+  align-self: center;
+  gap: 10px;
 }
